--- a/99_Test/04_GoBindataTemplates/frontend/index.gohtml
+++ b/99_Test/04_GoBindataTemplates/frontend/index.gohtml
@@ -1,22 +1,7 @@
-{{define "layouttemplate"}}
-<!DOCTYPE html>  
-<html lang="en">  
-  <head>
-    <title>Test app</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  </head>
+{{define "yield"}}
 
-  <body>
-    <h1>LAYOUT TEXT</h1>
-    <div>some layout text</div>
-
-    <div class="container-fluid">
+    <div>
       ASDFASDFASDF
-    </div>
-
-    <!-- jquery & Bootstrap JS -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </body>
-</html>  
+   </div>
+   
 {{end}}
